# vol2bird

./: .gitignore  INSTALL.MacOSX.md  INSTALL.mac-python.md  INSTALL.md  INSTALL.ubuntu.baltrad.md  INSTALL.ubuntu.md  INSTALL.ubuntu.simple.md  LICENSE  Makefile  Makefile.ODE  Makefile.OSX  Makefile.ubuntu.virtualbox  NEWS.md  README.md  config.status  configure  configure.in  constants.h  def.mk  def.mk.in  libsvdfit.c  libsvdfit.h  libvol2bird.c  libvol2bird.h  libvol2birdjni.c  options.conf  output.csv  rad.err.txt  readme.txt  rsl2odim.sh.in  testbaltrad.c  vol2bird  vol2bird-visualizer.py  vol2bird.c  vol2bird.sh.in  vol2bird.workspace
.codelite/: vol2bird.tags
R/: vol2bird.R
bugs/readattr/: testattr  testattr.c
data/: README.md
doc/: vol2bird_generate.md
docker/: Dockerfile  Dockerfile.lambda  Dockerfile.ubuntu  Dockerfile.vol2bird  Dockerfile.vol2bird-mistnet  README.md  gen_docker_image.sh  make_docker_image.sh  make_lambda_image.sh  make_ubuntu_image.sh  make_vol2bird-mistnet_image.sh  make_vol2bird_image.sh  run_vol2bird.sh  start_container.sh  stop_container.sh
docs/: annotated.html  classes.html  constants_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  files.html  globals.html  globals_func.html  index.html  libdealias_8c.html  libdealias_8h_source.html  librender_8h_source.html  librsl_8c.html  librsl_8h_source.html  libsvdfit_8c.html  libsvdfit_8h_source.html  libvol2bird_8c.html  libvol2bird_8h_source.html  md__Users_amd427_git_vol2bird_INSTALL_8MacOSX.html  md__Users_amd427_git_vol2bird_INSTALL_8ubuntu.html  menudata.js  pages.html  rsl2odim_8c.html  structcellprop-members.html  structcellprop.html  structscanmeta-members.html  structscanmeta.html  structvol2bird-members.html  structvol2bird.html  structvol2birdConstants-members.html  structvol2birdConstants.html  structvol2birdFlags-members.html  structvol2birdFlags.html  structvol2birdMisc-members.html  structvol2birdMisc.html  structvol2birdOptions-members.html  structvol2birdOptions.html  structvol2birdPoints-members.html  structvol2birdPoints.html  structvol2birdProfiles-members.html  (+5 more)
docs/html/: annotated.html  classes.html  classvol2bird-visualizer_1_1Vol2birdVisualizer-members.html  index.html  libdealias_8h_source.html  libsvdfit_8c.html  libsvdfit_8h_source.html  libvol2bird_8c.html  libvol2bird_8h_source.html  structcellprop-members.html  structcellprop.html  structscanmeta-members.html  structscanmeta.html  structvol2bird-members.html  structvol2birdConstants.html  structvol2birdMisc-members.html  structvol2birdProfiles-members.html  structvol2birdProfiles.html  structvol2birdScanUse-members.html  structvol2birdScanUse.html
docs/latex/: annotated.tex  libdealias_8c.tex  librsl_8c.tex  libsvdfit_8c.tex  refman.tex  structcellprop.tex  structscanmeta.tex  structvol2bird.tex  structvol2birdConstants.tex  structvol2birdFlags.tex  structvol2birdMisc.tex  structvol2birdOptions.tex  structvol2birdPoints.tex  structvol2birdProfiles.tex
documentation/: vol2bird.groovy.md
doxygen/: Makefile  vol2bird_doxygen.cfg
doxygen/html/: classvol2bird-visualizer_1_1Vol2birdVisualizer.html  constants_8h_source.html  files.html  md__Users_amd427_git_vol2bird_README.html  md__Users_amd427_git_vol2bird_doc_vol2bird_8groovy.html  md__Users_amd427_git_vol2bird_doc_vol2bird_generate.html  md__Users_amd427_git_vol2bird_lib_README.html  pages.html  rsl2odim_8c.html  structvol2birdFlags.html  structvol2birdMisc.html  structvol2birdPoints-members.html  structvol2birdPoints.html  vol2bird_8c.html
doxygen/latex/: classvol2bird-visualizer_1_1Vol2birdVisualizer.tex  files.tex  index.tex  libvol2bird_8c.tex  md__Users_amd427_git_vol2bird_README.tex  md__Users_amd427_git_vol2bird_doc_vol2bird_8groovy.tex  md__Users_amd427_git_vol2bird_doc_vol2bird_generate.tex  md__Users_amd427_git_vol2bird_lib_README.tex  rsl2odim_8c.tex  structvol2birdScanUse.tex  vol2bird_8c.tex
etc/: Dockerfile  options.conf
h5-repo/: README.md  bewid_pvol_20151009T0000Z.h5  bezav_pvol_20151009T0000Z.h5  bla.md  eesur_pvol_20151010T0000Z.h5  fiika_pvol_20151010T0000Z.h5  fikor_pvol_20151010T0000Z.h5  fikuo_pvol_20151010T0000Z.h5  filuo_pvol_20151010T0000Z.h5  frale_pvol_20151010T0000Z.h5  frbor_pvol_20151010T0000Z.h5  frgre_pvol_20151010T0000Z.h5  frlep_pvol_20151010T0000Z.h5  frmcl_pvol_20151010T0000Z.h5  frmtc_pvol_20151010T0000Z.h5  hrbil_pvol_20151010T0000Z.h5  hrosi_pvol_20151010T0000Z.h5  pvol2vp.sh  searl_pvol_20151010T0000Z.h5  selul_pvol_20151010T0000Z.h5  sevar_pvol_20151010T0000Z.h5  sevil_pvol_20151010T0000Z.h5  silis_pvol_20151010T0000Z.h5  ukcle_pvol_20151010T0000Z.h5  ukcob_pvol_20151010T0000Z.h5  ukdud_pvol_20151010T0000Z.h5  uking_pvol_20151010T0000Z.h5  uklew_pvol_20151010T0000Z.h5  ukmun_pvol_20151010T0000Z.h5  ukpre_pvol_20151010T0000Z.h5  ukthu_pvol_20151010T0000Z.h5
h5-repo/pvol/: README.md  bejab_pvol_20151009T0000Z.h5  dkbor_pvol_20151010T0000Z.h5  dkrom_pvol_20151010T0000Z.h5  dksin_pvol_20151010T0000Z.h5  dkste_pvol_20151010T0000Z.h5  dkvir_pvol_20151010T0000Z.h5  eehar_pvol_20151010T0000Z.h5  fianj_pvol_20151010T0000Z.h5  fikes_pvol_20151010T0000Z.h5  fiuta_pvol_20151010T0000Z.h5  fivan_pvol_20151010T0000Z.h5  fivim_pvol_20151010T0000Z.h5  frabb_pvol_20151010T0000Z.h5  frbla_pvol_20151010T0000Z.h5  (+29 more)
lib/: Makefile  README.md  constants.h  ldlib.txt  libdealias.c  libdealias.h  libmistnet.c  libmistnet.h  librender.c  librender.h  librsl.c  librsl.h  libsvdfit.c  libsvdfit.h  libvol2bird.c  libvol2bird.h  libvol2bird.project  libvol2birdjni.c  options.conf  profout.h5  vol2bird  vol2bird.c
libmistnet/: CMakeLists.txt  Makefile  README.md  build.sh  configure  configure.in  libmistnet.cpp  libmistnet.h  librender.c  librender.h  mistnet.cpp  mistnet.h
pgfplugin/: Makefile  rave_pgf_vol2bird_plugin.py
pyvol2bird/: Makefile  README.md  options.conf  pyvol2bird.c  pyvol2bird.h  test.h5
src/: Makefile  rsl2odim.c  vol2bird.c
tests/: .gitignore  Makefile  test_PgfVol2BirdPlugin.py
tests/openfile/: README.md  (+7 more)
tools/: run_python_script.sh  run_python_script.sh~
(+79 files in other folders)
