dnl	This file is an input file used by the GNU "autoconf" program to
dnl	generate the file "configure", which is run during vol2bird 
dnl	installation to configure the system for the local environment.

AC_INIT([vol2bird],[0.3.0])

if test "${prefix}" = "NONE"; then
	prefix=/opt/radar/vol2bird
fi

dnl Since I can not expand the localstatedir I do this instead
if test "${localstatedir}" = "\${prefix}/var"; then
    localstatedir="`echo ${prefix}`/var"
fi

AC_PROG_CC

LIBS=-lm

dnl Check that we have libconfuse installed
dnl
CONFUSE_INCLUDE_DIR=
CONFUSE_LIB_DIR=
GOT_CONFUSE_INC=no
GOT_CONFUSE_LIB=no
CONFUSE_SUPPRESSED=no
AC_ARG_WITH(confuse,[  --with-confuse=DIR	  The confuse root installation directory],
		,withval=yes)
case $withval in
	yes)
		AC_CHECK_HEADERS(confuse.h,GOT_CONFUSE_INC=yes)
		AC_CHECK_LIB(confuse,cfg_init,GOT_CONFUSE_LIB=yes)
		;;
	no)
                AC_MSG_CHECKING(for confuse lib)
		AC_MSG_RESULT(suppressed)
		CONFUSE_SUPPRESSED=yes
		;;
	*)
    if [[ "$withval" != "" ]]; then
      if [[ "`echo $withval | grep ','`" = "" ]]; then
        confuse_inc=$withval/include
        confuse_lib=$withval/lib
      else
        confuse_inc="`echo $withval |cut -f1 -d,`"
        confuse_lib="`echo $withval |cut -f2 -d,`"
      fi
      
      if [[ "$confuse_inc" != "" ]]; then
        saved_CPPFLAGS="$CPPFLAGS"
        CPPFLAGS="$CPPFLAGS -I$confuse_inc"
        AC_CHECK_HEADERS(confuse.h,GOT_CONFUSE_INC=yes)
        if [[ "$GOT_CONFUSE_INC" = "yes" ]]; then
          CONFUSE_INCLUDE_DIR="-I$confuse_inc"
        else
          CPPFLAGS="$saved_CPPFLAGS"
        fi
      else
        AC_CHECK_HEADERS(confuse.h,GOT_CONFUSE_INC=yes)
      fi

      if [[ "$confuse_lib" != "" ]]; then
        saved_LDFLAGS="$LDFLAGS"
        LDFLAGS="$LDFLAGS -L$confuse_lib"
        AC_CHECK_LIB(confuse,cfg_init,GOT_CONFUSE_LIB=yes)
        if [[ "$GOT_CONFUSE_LIB" = "yes" ]]; then
          CONFUSE_LIB_DIR="-L$confuse_lib"
        else
          LDFLAGS="$saved_LDFLAGS"
        fi
      else
        AC_CHECK_LIB(confuse,cfg_init,GOT_CONFUSE_LIB=yes)
      fi
    else
      AC_MSG_ERROR("Odd argument passed for confuse")
    fi
    ;;
esac

if [[ "x$CONFUSE_SUPPRESSED" = "xno" ]]; then
	if [[ "x$GOT_CONFUSE_INC" = "xno" -o "x$GOT_CONFUSE_LIB" = "xno" ]]; then
		AC_MSG_ERROR("Could not successfully find the confuse library")
	fi
fi

CONFUSE_LIBRARY_FLAG=${CONFUSE_LIB_DIR}
CONFUSE_INCLUDE_FLAG=${CONFUSE_INCLUDE_DIR}

dnl Check that we have librsl installed
dnl
RSL_INCLUDE_DIR=
RSL_LIB_DIR=
RSL_CFLAG=
RSL_LIB=
GOT_RSL_INC=no
GOT_RSL_LIB=no
RSL_SUPPRESSED=no
AC_ARG_WITH(rsl,[  --with-rsl=DIR	  The RSL root installation directory],
		,withval=yes)
case $withval in
	yes)
		AC_CHECK_HEADERS(rsl.h,GOT_RSL_INC=yes)
		AC_CHECK_LIB(rsl,wsr88d_read_sweep,GOT_RSL_LIB=yes)
		;;
	no)
                AC_MSG_CHECKING(for RSL library)
		AC_MSG_RESULT(suppressed)
		RSL_SUPPRESSED=yes
		;;
	*)
    if [[ "$withval" != "" ]]; then
      if [[ "`echo $withval | grep ','`" = "" ]]; then
        rsl_inc=$withval/include
        rsl_lib=$withval/lib
      else
        rsl_inc="`echo $withval |cut -f1 -d,`"
        rsl_lib="`echo $withval |cut -f2 -d,`"
      fi
      
      if [[ "$rsl_inc" != "" ]]; then
        saved_CPPFLAGS="$CPPFLAGS"
        CPPFLAGS="$CPPFLAGS -I$rsl_inc"
        AC_CHECK_HEADERS(rsl.h,GOT_RSL_INC=yes)
        if [[ "$GOT_RSL_INC" = "yes" ]]; then
          RSL_INCLUDE_DIR="-I$rsl_inc"
        else
          CPPFLAGS="$saved_CPPFLAGS"
        fi
      else
        AC_CHECK_HEADERS(rsl.h,GOT_RSL_INC=yes)
      fi

      if [[ "$rsl_lib" != "" ]]; then
        saved_LDFLAGS="$LDFLAGS"
        LDFLAGS="$LDFLAGS -L$rsl_lib"
        AC_CHECK_LIB(rsl,wsr88d_read_sweep,GOT_RSL_LIB=yes)
        if [[ "$GOT_RSL_LIB" = "yes" ]]; then
          RSL_LIB_DIR="-L$rsl_lib"
        else
          LDFLAGS="$saved_LDFLAGS"
        fi
      else
        AC_CHECK_LIB(rsl,wsr88d_read_sweep,GOT_RSL_LIB=yes)
      fi
    else
      AC_MSG_ERROR("Odd argument passed for rsl")
    fi
    ;;
esac

RSL_LIBRARY_FLAG=${RSL_LIB_DIR}
RSL_INCLUDE_FLAG=${RSL_INCLUDE_DIR}
AC_MSG_CHECKING(for RSL installation)
if [[ "$GOT_RSL_INC" = "yes" ]]; then
   if [[ "$GOT_RSL_LIB" = "yes" ]]; then
      AC_MSG_RESULT(yes)
      RSL_CFLAG=-DRSL
      RSL_LIB=-lrsl
   else
      AC_MSG_RESULT(no)
   fi
else
   AC_MSG_RESULT(no)
fi

dnl First verify that we have a proper rave installation. We can not live without it
dnl
RAVE_ROOT_DIR=
RAVE_INCLUDE_FLAG=
RAVE_LIB_FLAG=
AC_ARG_WITH(rave,[  --with-rave=ROOT	  The RAVE root installation directory],
     ,withval=yes)
case $withval in
  no)
    AC_MSG_ERROR(You cannot remove dependencies to RAVE);
    ;;
  *)
    AC_MSG_CHECKING(for RAVE installation)
    TMPDIR=
    if [[ "yes" = "$withval" ]]; then
      TMPFIL=`python -c "import _rave; print eval(\"_rave.__\"+\"file__\")" 2>&1 | head -1`
      if [[ -f "$TMPFIL" ]]; then
        TMPDIR=`echo "$TMPFIL" | sed -e"s/\/Lib\/_rave\.so//"`
      fi
    else
      if [[ -d "$withval" -a -f "$withval/Lib/_rave.so" ]]; then
        TMPDIR=$withval
      fi
    fi
    if [[ "$TMPDIR" = "" ]]; then
      AC_MSG_RESULT(not found)
    else
      AC_MSG_RESULT(found)
      RAVE_ROOT_DIR=$TMPDIR
    fi    
    ;;
esac

if [[ "$RAVE_ROOT_DIR" = "" ]]; then
  AC_MSG_ERROR("Could not identify a RAVE installation")
fi

AC_MSG_CHECKING(existance of RAVE build configuration)
if [[ -f "$RAVE_ROOT_DIR/mkf/def.mk" ]]; then
  RAVE_INCLUDE_FLAG=-I$RAVE_ROOT_DIR/include
  RAVE_LIB_FLAG=-L$RAVE_ROOT_DIR/lib
  AC_MSG_RESULT(found)
else
  AC_MSG_RESULT(not found);
  AC_MSG_FAILURE(The RAVE installation does not contain def.mk. Is this an old installation);
fi

dnl Now we should extract some variables from raves def.mk file to give user a possibility to change
dnl then when necessary
AC_MSG_CHECKING(for RAVE cc compiler)
RAVECC=`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^CC=/p" | sed -n -e"s/^CC=[[ \t]]*\(.*\)/\1/p"`
AC_MSG_RESULT($RAVECC)

AC_MSG_CHECKING(for RAVE cc options)
RAVECCOPTS=`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^OPTS=/p" | sed -n -e"s/^OPTS=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($RAVECCOPTS)

dnl Remove strict prototype from cc options
dnl
AC_MSG_CHECKING(for cpp options)
CPPOPTS=`echo "$RAVECCOPTS" | sed -e "s/-Wstrict-prototypes//"`
AC_MSG_RESULT($CPPOPTS)

AC_MSG_CHECKING(for RAVE ld flags)
RAVELDFLAGS=`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^LDFLAGS=/p" | sed -n -e"s/^LDFLAGS=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($RAVELDFLAGS)

AC_MSG_CHECKING(for RAVE shared flag)
RAVECCSHARED=`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^CCSHARED=/p" | sed -n -e"s/^CCSHARED=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($RAVECCSHARED)

AC_MSG_CHECKING(for Python include flag)
PYTHON_INCLUDE_FLAG=`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^INCLUDE_PYTHON=/p" | sed -n -e"s/^INCLUDE_PYTHON=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($INCLUDE_PYTHON)

AC_MSG_CHECKING(for numpy include flag)
NUMPY_INCLUDE_FLAG=`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^NUMPY_INCLUDE_DIR=/p" | sed -n -e"s/^NUMPY_INCLUDE_DIR=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($PROJ_INCLUDE_FLAG)

AC_MSG_CHECKING(for proj include flag used by RAVE)
PROJ_INCLUDE_FLAG=`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^PROJ_INCLUDE_DIR=/p" | sed -n -e"s/^PROJ_INCLUDE_DIR=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($PROJ_INCLUDE_FLAG)

AC_MSG_CHECKING(for proj library flag used by RAVE)
PROJ_LIBRARY_FLAG=`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^PROJ_LIB_DIR=/p" | sed -n -e"s/^PROJ_LIB_DIR=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($PROJ_INCLUDE_FLAG)

AC_MSG_CHECKING(for expat include flag used by RAVE)
EXPAT_INCLUDE_FLAG=`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^EXPAT_INCLUDE_DIR=/p" | sed -n -e"s/^EXPAT_INCLUDE_DIR=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($EXPAT_INCLUDE_FLAG)

AC_MSG_CHECKING(for expat library flag used by RAVE)
EXPAT_LIBRARY_FLAG=`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^EXPAT_LIB_DIR=/p" | sed -n -e"s/^EXPAT_LIB_DIR=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($EXPAT_INCLUDE_FLAG)

AC_MSG_CHECKING(if expat is supressed)
EXPAT_SUPPRESSED=`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^EXPAT_SUPPRESSED=/p" | sed -n -e"s/^EXPAT_SUPPRESSED=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($EXPAT_SUPPRESSED)

AC_MSG_CHECKING(for hlhdf include flag used by RAVE)
HLHDF_INCLUDE_FLAG=-I`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^HLHDF_INCLUDE_DIR=/p" | sed -n -e"s/^HLHDF_INCLUDE_DIR=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($HLHDF_INCLUDE_FLAG)

AC_MSG_CHECKING(for hlhdf library flag used by RAVE)
HLHDF_LIBRARY_FLAG=-L`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^HLHDF_LIB_DIR=/p" | sed -n -e"s/^HLHDF_LIB_DIR=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($HLHDF_LIBRARY_FLAG)

AC_MSG_CHECKING(for hlhdf config file)
HLHDF_MK_FILE=`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^HLHDF_HLDEF_MK_FILE=/p" | sed -n -e"s/^HLHDF_HLDEF_MK_FILE=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($HLHDF_MK_FILE)

AC_MSG_CHECKING(for hlhdf ld shared)
HLHDFLDSHARED=`cat $HLHDF_MK_FILE | sed -n "/^LDSHARED=/p" | sed -n -e"s/^LDSHARED=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($HLHDFLDSHARED)

AC_MSG_CHECKING(for g++ ld shared options)
LDCPPSHARED=`echo "$HLHDFLDSHARED" | awk '{$1=""}1'`
AC_MSG_RESULT($LDCPPSHARED)


AC_MSG_CHECKING(for hdf5 software used by hlhdf)
HLHDF_HDF5_LIB=`cat $HLHDF_MK_FILE | sed -n "/^HDF5_LIBDIR=/p" | sed -n -e"s/^HDF5_LIBDIR=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($HLHDF_HDF5_LIB)

AC_MSG_CHECKING(for zlib software used by hlhdf)
HLHDF_ZLIB_LIB=`cat $HLHDF_MK_FILE | sed -n "/^ZLIB_LIBDIR=/p" | sed -n -e"s/^ZLIB_LIBDIR=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($HLHDF_ZLIB_LIB)

AC_MSG_CHECKING(for szlib software used by hlhdf)
HLHDF_SZLIB_LIB=`cat $HLHDF_MK_FILE | sed -n "/^SZLIB_LIBDIR=/p" | sed -n -e"s/^SZLIB_LIBDIR=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($HLHDF_SZLIB_LIB)

dnl Generate the ld library printout
dnl
LD_PRINTOUT=$prefix/lib
if [[ "$RAVE_LIB_FLAG" != "" ]]; then
  LD_PRINTOUT=$LD_PRINTOUT:`echo "$RAVE_LIB_FLAG" | sed -e"s/[[ \t]]*-L//"`
fi

if [[ "$HLHDF_LIBRARY_FLAG" != "" ]]; then
  LD_PRINTOUT=$LD_PRINTOUT:`echo "$HLHDF_LIBRARY_FLAG" | sed -e"s/[[ \t]]*-L//"`
fi

if [[ "$HLHDF_HDF5_LIB" != "" ]]; then
  LD_PRINTOUT=$LD_PRINTOUT:`echo "$HLHDF_HDF5_LIB" | sed -e"s/[[ \t]]*-L//"`
fi

if [[ "$PROJ_LIB_FLAG" != "" ]]; then
  LD_PRINTOUT=$LD_PRINTOUT:`echo "$PROJ_LIB_FLAG" | sed -e"s/[[ \t]]*-L//"`
fi

if [[ "$EXPAT_LIBRARY_FLAG" != "" ]]; then
  LD_PRINTOUT=$LD_PRINTOUT:`echo "$EXPAT_LIBRARY_FLAG" | sed -e"s/[[ \t]]*-L//"`
fi

if [[ "$HLHDF_ZLIB_LIB" != "" ]]; then
  LD_PRINTOUT=$LD_PRINTOUT:`echo "$HLHDF_ZLIB_LIB" | sed -e"s/[[ \t]]*-L//"`
fi

if [[ "$HLHDF_SZLIB_LIB" != "" ]]; then
  LD_PRINTOUT=$LD_PRINTOUT:`echo "$HLHDF_SZLIB_LIB" | sed -e"s/[[ \t]]*-L//"`
fi

AC_SUBST(RAVE_ROOT_DIR)
AC_SUBST(RAVE_INCLUDE_FLAG)
AC_SUBST(RAVE_LIB_FLAG)
AC_SUBST(RAVECC)
AC_SUBST(RAVECCOPTS)
AC_SUBST(RAVELDFLAGS)
AC_SUBST(RAVECCSHARED)
AC_SUBST(PYTHON_INCLUDE_FLAG)
AC_SUBST(NUMPY_INCLUDE_FLAG)
AC_SUBST(PROJ_INCLUDE_FLAG)
AC_SUBST(PROJ_LIBRARY_FLAG)
AC_SUBST(EXPAT_INCLUDE_FLAG)
AC_SUBST(EXPAT_LIBRARY_FLAG)
AC_SUBST(EXPAT_SUPPRESSED)
AC_SUBST(HLHDF_INCLUDE_FLAG)
AC_SUBST(HLHDF_LIBRARY_FLAG)
AC_SUBST(HLHDFLDSHARED)
AC_SUBST(CONFUSE_INCLUDE_FLAG)
AC_SUBST(CONFUSE_LIBRARY_FLAG)
AC_SUBST(RSL_INCLUDE_FLAG)
AC_SUBST(RSL_LIBRARY_FLAG)
AC_SUBST(RSL_CFLAG)
AC_SUBST(RSL_LIB)
AC_SUBST(LD_PRINTOUT)
AC_SUBST(LD_PRINTOUT)

AC_CONFIG_FILES(def.mk)
# lib/config.h)
AC_OUTPUT
dnl	This file is an input file used by the GNU "autoconf" program to
dnl	generate the file "configure", which is run during vol2bird 
dnl	installation to configure the system for the local environment.

AC_INIT([vol2bird],[0.3.0])

if test "${prefix}" = "NONE"; then
	prefix=/opt/radar/vol2bird
fi

dnl Since I can not expand the localstatedir I do this instead
if test "${localstatedir}" = "\${prefix}/var"; then
    localstatedir="`echo ${prefix}`/var"
fi

AC_PROG_CC

LIBS=-lm

dnl Check that we have libconfuse installed
dnl
CONFUSE_INCLUDE_DIR=
CONFUSE_LIB_DIR=
GOT_CONFUSE_INC=no
GOT_CONFUSE_LIB=no
CONFUSE_SUPPRESSED=no
AC_ARG_WITH(confuse,[  --with-confuse=DIR	  The confuse root installation directory],
		,withval=yes)
case $withval in
	yes)
		AC_CHECK_HEADERS(confuse.h,GOT_CONFUSE_INC=yes)
		AC_CHECK_LIB(confuse,cfg_init,GOT_CONFUSE_LIB=yes)
		;;
	no)
                AC_MSG_CHECKING(for confuse lib)
		AC_MSG_RESULT(suppressed)
		CONFUSE_SUPPRESSED=yes
		;;
	*)
    if [[ "$withval" != "" ]]; then
      if [[ "`echo $withval | grep ','`" = "" ]]; then
        confuse_inc=$withval/include
        confuse_lib=$withval/lib
      else
        confuse_inc="`echo $withval |cut -f1 -d,`"
        confuse_lib="`echo $withval |cut -f2 -d,`"
      fi
      
      if [[ "$confuse_inc" != "" ]]; then
        saved_CPPFLAGS="$CPPFLAGS"
        CPPFLAGS="$CPPFLAGS -I$confuse_inc"
        AC_CHECK_HEADERS(confuse.h,GOT_CONFUSE_INC=yes)
        if [[ "$GOT_CONFUSE_INC" = "yes" ]]; then
          CONFUSE_INCLUDE_DIR="-I$confuse_inc"
        else
          CPPFLAGS="$saved_CPPFLAGS"
        fi
      else
        AC_CHECK_HEADERS(confuse.h,GOT_CONFUSE_INC=yes)
      fi

      if [[ "$confuse_lib" != "" ]]; then
        saved_LDFLAGS="$LDFLAGS"
        LDFLAGS="$LDFLAGS -L$confuse_lib"
        AC_CHECK_LIB(confuse,cfg_init,GOT_CONFUSE_LIB=yes)
        if [[ "$GOT_CONFUSE_LIB" = "yes" ]]; then
          CONFUSE_LIB_DIR="-L$confuse_lib"
        else
          LDFLAGS="$saved_LDFLAGS"
        fi
      else
        AC_CHECK_LIB(confuse,cfg_init,GOT_CONFUSE_LIB=yes)
      fi
    else
      AC_MSG_ERROR("Odd argument passed for confuse")
    fi
    ;;
esac

if [[ "x$CONFUSE_SUPPRESSED" = "xno" ]]; then
	if [[ "x$GOT_CONFUSE_INC" = "xno" -o "x$GOT_CONFUSE_LIB" = "xno" ]]; then
		AC_MSG_ERROR("Could not successfully find the confuse library")
	fi
fi

CONFUSE_LIBRARY_FLAG=${CONFUSE_LIB_DIR}
CONFUSE_INCLUDE_FLAG=${CONFUSE_INCLUDE_DIR}

dnl Check that we have librsl installed
dnl
RSL_INCLUDE_DIR=
RSL_LIB_DIR=
RSL_CFLAG=
RSL_LIB=
GOT_RSL_INC=no
GOT_RSL_LIB=no
RSL_SUPPRESSED=no
AC_ARG_WITH(rsl,[  --with-rsl=DIR	  The RSL root installation directory],
		,withval=yes)
case $withval in
	yes)
		AC_CHECK_HEADERS(rsl.h,GOT_RSL_INC=yes)
		AC_CHECK_LIB(rsl,wsr88d_read_sweep,GOT_RSL_LIB=yes)
		;;
	no)
                AC_MSG_CHECKING(for RSL library)
		AC_MSG_RESULT(suppressed)
		RSL_SUPPRESSED=yes
		;;
	*)
    if [[ "$withval" != "" ]]; then
      if [[ "`echo $withval | grep ','`" = "" ]]; then
        rsl_inc=$withval/include
        rsl_lib=$withval/lib
      else
        rsl_inc="`echo $withval |cut -f1 -d,`"
        rsl_lib="`echo $withval |cut -f2 -d,`"
      fi
      
      if [[ "$rsl_inc" != "" ]]; then
        saved_CPPFLAGS="$CPPFLAGS"
        CPPFLAGS="$CPPFLAGS -I$rsl_inc"
        AC_CHECK_HEADERS(rsl.h,GOT_RSL_INC=yes)
        if [[ "$GOT_RSL_INC" = "yes" ]]; then
          RSL_INCLUDE_DIR="-I$rsl_inc"
        else
          CPPFLAGS="$saved_CPPFLAGS"
        fi
      else
        AC_CHECK_HEADERS(rsl.h,GOT_RSL_INC=yes)
      fi

      if [[ "$rsl_lib" != "" ]]; then
        saved_LDFLAGS="$LDFLAGS"
        LDFLAGS="$LDFLAGS -L$rsl_lib"
        AC_CHECK_LIB(rsl,wsr88d_read_sweep,GOT_RSL_LIB=yes)
        if [[ "$GOT_RSL_LIB" = "yes" ]]; then
          RSL_LIB_DIR="-L$rsl_lib"
        else
          LDFLAGS="$saved_LDFLAGS"
        fi
      else
        AC_CHECK_LIB(rsl,wsr88d_read_sweep,GOT_RSL_LIB=yes)
      fi
    else
      AC_MSG_ERROR("Odd argument passed for rsl")
    fi
    ;;
esac

RSL_LIBRARY_FLAG=${RSL_LIB_DIR}
RSL_INCLUDE_FLAG=${RSL_INCLUDE_DIR}
AC_MSG_CHECKING(for RSL installation)
if [[ "$GOT_RSL_INC" = "yes" ]]; then
   if [[ "$GOT_RSL_LIB" = "yes" ]]; then
      AC_MSG_RESULT(yes)
      RSL_CFLAG=-DRSL
      RSL_LIB=-lrsl
   else
      AC_MSG_RESULT(no)
   fi
else
   AC_MSG_RESULT(no)
fi

dnl First verify that we have a proper rave installation. We can not live without it
dnl
RAVE_ROOT_DIR=
RAVE_INCLUDE_FLAG=
RAVE_LIB_FLAG=
AC_ARG_WITH(rave,[  --with-rave=ROOT	  The RAVE root installation directory],
     ,withval=yes)
case $withval in
  no)
    AC_MSG_ERROR(You cannot remove dependencies to RAVE);
    ;;
  *)
    AC_MSG_CHECKING(for RAVE installation)
    TMPDIR=
    if [[ "yes" = "$withval" ]]; then
      TMPFIL=`python -c "import _rave; print eval(\"_rave.__\"+\"file__\")" 2>&1 | head -1`
      if [[ -f "$TMPFIL" ]]; then
        TMPDIR=`echo "$TMPFIL" | sed -e"s/\/Lib\/_rave\.so//"`
      fi
    else
      if [[ -d "$withval" -a -f "$withval/Lib/_rave.so" ]]; then
        TMPDIR=$withval
      fi
    fi
    if [[ "$TMPDIR" = "" ]]; then
      AC_MSG_RESULT(not found)
    else
      AC_MSG_RESULT(found)
      RAVE_ROOT_DIR=$TMPDIR
    fi    
    ;;
esac

if [[ "$RAVE_ROOT_DIR" = "" ]]; then
  AC_MSG_ERROR("Could not identify a RAVE installation")
fi

AC_MSG_CHECKING(existance of RAVE build configuration)
if [[ -f "$RAVE_ROOT_DIR/mkf/def.mk" ]]; then
  RAVE_INCLUDE_FLAG=-I$RAVE_ROOT_DIR/include
  RAVE_LIB_FLAG=-L$RAVE_ROOT_DIR/lib
  AC_MSG_RESULT(found)
else
  AC_MSG_RESULT(not found);
  AC_MSG_FAILURE(The RAVE installation does not contain def.mk. Is this an old installation);
fi

dnl Now we should extract some variables from raves def.mk file to give user a possibility to change
dnl then when necessary
AC_MSG_CHECKING(for RAVE cc compiler)
RAVECC=`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^CC=/p" | sed -n -e"s/^CC=[[ \t]]*\(.*\)/\1/p"`
AC_MSG_RESULT($RAVECC)

AC_MSG_CHECKING(for RAVE cc options)
RAVECCOPTS=`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^OPTS=/p" | sed -n -e"s/^OPTS=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($RAVECCOPTS)

dnl Remove strict prototype from cc options
dnl
AC_MSG_CHECKING(for cpp options)
CPPOPTS=`echo "$RAVECCOPTS" | sed -e "s/-Wstrict-prototypes//"`
AC_MSG_RESULT($CPPOPTS)

AC_MSG_CHECKING(for RAVE ld flags)
RAVELDFLAGS=`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^LDFLAGS=/p" | sed -n -e"s/^LDFLAGS=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($RAVELDFLAGS)

AC_MSG_CHECKING(for RAVE shared flag)
RAVECCSHARED=`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^CCSHARED=/p" | sed -n -e"s/^CCSHARED=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($RAVECCSHARED)

AC_MSG_CHECKING(for Python include flag)
PYTHON_INCLUDE_FLAG=`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^INCLUDE_PYTHON=/p" | sed -n -e"s/^INCLUDE_PYTHON=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($INCLUDE_PYTHON)

AC_MSG_CHECKING(for numpy include flag)
NUMPY_INCLUDE_FLAG=`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^NUMPY_INCLUDE_DIR=/p" | sed -n -e"s/^NUMPY_INCLUDE_DIR=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($PROJ_INCLUDE_FLAG)

AC_MSG_CHECKING(for proj include flag used by RAVE)
PROJ_INCLUDE_FLAG=`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^PROJ_INCLUDE_DIR=/p" | sed -n -e"s/^PROJ_INCLUDE_DIR=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($PROJ_INCLUDE_FLAG)

AC_MSG_CHECKING(for proj library flag used by RAVE)
PROJ_LIBRARY_FLAG=`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^PROJ_LIB_DIR=/p" | sed -n -e"s/^PROJ_LIB_DIR=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($PROJ_INCLUDE_FLAG)

AC_MSG_CHECKING(for expat include flag used by RAVE)
EXPAT_INCLUDE_FLAG=`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^EXPAT_INCLUDE_DIR=/p" | sed -n -e"s/^EXPAT_INCLUDE_DIR=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($EXPAT_INCLUDE_FLAG)

AC_MSG_CHECKING(for expat library flag used by RAVE)
EXPAT_LIBRARY_FLAG=`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^EXPAT_LIB_DIR=/p" | sed -n -e"s/^EXPAT_LIB_DIR=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($EXPAT_INCLUDE_FLAG)

AC_MSG_CHECKING(if expat is supressed)
EXPAT_SUPPRESSED=`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^EXPAT_SUPPRESSED=/p" | sed -n -e"s/^EXPAT_SUPPRESSED=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($EXPAT_SUPPRESSED)

AC_MSG_CHECKING(for hlhdf include flag used by RAVE)
HLHDF_INCLUDE_FLAG=-I`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^HLHDF_INCLUDE_DIR=/p" | sed -n -e"s/^HLHDF_INCLUDE_DIR=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($HLHDF_INCLUDE_FLAG)

AC_MSG_CHECKING(for hlhdf library flag used by RAVE)
HLHDF_LIBRARY_FLAG=-L`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^HLHDF_LIB_DIR=/p" | sed -n -e"s/^HLHDF_LIB_DIR=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($HLHDF_LIBRARY_FLAG)

AC_MSG_CHECKING(for hlhdf config file)
HLHDF_MK_FILE=`cat $RAVE_ROOT_DIR/mkf/def.mk | sed -n "/^HLHDF_HLDEF_MK_FILE=/p" | sed -n -e"s/^HLHDF_HLDEF_MK_FILE=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($HLHDF_MK_FILE)

AC_MSG_CHECKING(for hlhdf ld shared)
HLHDFLDSHARED=`cat $HLHDF_MK_FILE | sed -n "/^LDSHARED=/p" | sed -n -e"s/^LDSHARED=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($HLHDFLDSHARED)

AC_MSG_CHECKING(for g++ ld shared options)
LDCPPSHARED=`echo "$HLHDFLDSHARED" | awk '{$1=""}1'`
AC_MSG_RESULT($LDCPPSHARED)


AC_MSG_CHECKING(for hdf5 software used by hlhdf)
HLHDF_HDF5_LIB=`cat $HLHDF_MK_FILE | sed -n "/^HDF5_LIBDIR=/p" | sed -n -e"s/^HDF5_LIBDIR=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($HLHDF_HDF5_LIB)

AC_MSG_CHECKING(for zlib software used by hlhdf)
HLHDF_ZLIB_LIB=`cat $HLHDF_MK_FILE | sed -n "/^ZLIB_LIBDIR=/p" | sed -n -e"s/^ZLIB_LIBDIR=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($HLHDF_ZLIB_LIB)

AC_MSG_CHECKING(for szlib software used by hlhdf)
HLHDF_SZLIB_LIB=`cat $HLHDF_MK_FILE | sed -n "/^SZLIB_LIBDIR=/p" | sed -n -e"s/^SZLIB_LIBDIR=[[ 	]]*\(.*\)/\1/p"`
AC_MSG_RESULT($HLHDF_SZLIB_LIB)

dnl Generate the ld library printout
dnl
LD_PRINTOUT=$prefix/lib
if [[ "$RAVE_LIB_FLAG" != "" ]]; then
  LD_PRINTOUT=$LD_PRINTOUT:`echo "$RAVE_LIB_FLAG" | sed -e"s/[[ \t]]*-L//"`
fi

if [[ "$HLHDF_LIBRARY_FLAG" != "" ]]; then
  LD_PRINTOUT=$LD_PRINTOUT:`echo "$HLHDF_LIBRARY_FLAG" | sed -e"s/[[ \t]]*-L//"`
fi

if [[ "$HLHDF_HDF5_LIB" != "" ]]; then
  LD_PRINTOUT=$LD_PRINTOUT:`echo "$HLHDF_HDF5_LIB" | sed -e"s/[[ \t]]*-L//"`
fi

if [[ "$PROJ_LIB_FLAG" != "" ]]; then
  LD_PRINTOUT=$LD_PRINTOUT:`echo "$PROJ_LIB_FLAG" | sed -e"s/[[ \t]]*-L//"`
fi

if [[ "$EXPAT_LIBRARY_FLAG" != "" ]]; then
  LD_PRINTOUT=$LD_PRINTOUT:`echo "$EXPAT_LIBRARY_FLAG" | sed -e"s/[[ \t]]*-L//"`
fi

if [[ "$HLHDF_ZLIB_LIB" != "" ]]; then
  LD_PRINTOUT=$LD_PRINTOUT:`echo "$HLHDF_ZLIB_LIB" | sed -e"s/[[ \t]]*-L//"`
fi

if [[ "$HLHDF_SZLIB_LIB" != "" ]]; then
  LD_PRINTOUT=$LD_PRINTOUT:`echo "$HLHDF_SZLIB_LIB" | sed -e"s/[[ \t]]*-L//"`
fi

AC_SUBST(RAVE_ROOT_DIR)
AC_SUBST(RAVE_INCLUDE_FLAG)
AC_SUBST(RAVE_LIB_FLAG)
AC_SUBST(RAVECC)
AC_SUBST(RAVECCOPTS)
AC_SUBST(RAVELDFLAGS)
AC_SUBST(RAVECCSHARED)
AC_SUBST(PYTHON_INCLUDE_FLAG)
AC_SUBST(NUMPY_INCLUDE_FLAG)
AC_SUBST(PROJ_INCLUDE_FLAG)
AC_SUBST(PROJ_LIBRARY_FLAG)
AC_SUBST(EXPAT_INCLUDE_FLAG)
AC_SUBST(EXPAT_LIBRARY_FLAG)
AC_SUBST(EXPAT_SUPPRESSED)
AC_SUBST(HLHDF_INCLUDE_FLAG)
AC_SUBST(HLHDF_LIBRARY_FLAG)
AC_SUBST(HLHDFLDSHARED)
AC_SUBST(CONFUSE_INCLUDE_FLAG)
AC_SUBST(CONFUSE_LIBRARY_FLAG)
AC_SUBST(RSL_INCLUDE_FLAG)
AC_SUBST(RSL_LIBRARY_FLAG)
AC_SUBST(RSL_CFLAG)
AC_SUBST(RSL_LIB)
AC_SUBST(LD_PRINTOUT)
AC_SUBST(LD_PRINTOUT)

AC_CONFIG_FILES(def.mk)
# lib/config.h)
AC_OUTPUT

